# MaxsuAIProcessFix-ng

./: .gitignore  CMakeBuild.bat  CMakeLists.txt  MaxsuAIProcessFix.sln  MyFirstPlugin.vcxproj  MyFirstPlugin.vcxproj.filters  main.cpp  vcpkg.json
CommonLibSSE/: CommonLibSSE.vcxproj  CommonLibSSE.vcxproj.filters  resource.h
CommonLibSSE/include/RE/: Skyrim.h
CommonLibSSE/include/RE/Animation/BSIRagdollDriver/: BShkbAnimationGraph.h
CommonLibSSE/include/RE/Events/: BSAnimationGraphEvent.h
CommonLibSSE/include/RE/Events/BGSActorEvent/: BGSActorCellEvent.h
CommonLibSSE/include/RE/Events/ScriptEvent/: ScriptEventSourceHolder.h  TESFurnitureEvent.h
CommonLibSSE/include/RE/FileIO/: TESFile.h
CommonLibSSE/include/RE/NetImmerse/: NiPoint3.h
CommonLibSSE/include/RE/Offsets/: Offsets.h
CommonLibSSE/include/REL/: Relocation.h
CommonLibSSE/src/RE/FormComponents/: TESForm.cpp
CommonLibSSE/src/RE/NetImmerse/: NiPoint3.cpp
CommonLibSSE/src/REL/: Relocation.cpp
cmake/: XSEPlugin.cmake
include/: AIProcessEvent_SleepWait.h  AIProcessFunction.h  AIProcess_Guards.h  MaxsuLogsBackUp.h  PCH.h  Util.h
package/SKSE/Plugins/MaxsuAIProcessFixFiles/: AIProcessFixSettings.ini
package/fomod/: ModuleConfig.xml
src/: AIProcessData.cpp  AIProcessData.h  AIProcessEvent_FastTravel.cpp  AIProcessEvent_FastTravel.h  AIProcessEvent_SleepWait.cpp  AIProcessEvent_SleepWait.h  AIProcessFunction.cpp  AIProcessFunction.h  AIProcessLoadGameFunc.cpp  AIProcessLoadGameFunc.h  AIProcess_Guards.cpp  FormUtil.cpp  FormUtil.h  MaxsuLogsBackUp.cpp  Util.cpp  XSEPlugin.cpp  version.h
(+12 files in other folders)
